tests/negative/postcondition_fail.mm
atom bad_postcondition(x: i64)
    requires: true;
    ensures: result > 0;
    body: { 0 }
